# ink-automated-market-maker-ui

./: README.md
.github/workflows/: gh-pages.yml  rust.yml
wasm-dex-ui/: Cargo.toml  Dioxus.toml  LICENSE-MIT  README.md
wasm-dex-ui/components/: about.rs  exchange-widget.rs
wasm-dex-ui/src/: app.rs  dex.rs  main.rs
