[package]
name = "wasm-dex-ui"
version = "0.1.0"
edition = "2021"


[dependencies]
dioxus-fullstack = { version = "0.4", features = ["router"] }
dioxus = "0.4.0"
dioxus-web = "0.4.0"
dioxus-router = "0.4.1"
# dioxus-tui = { version = "0.4" }
# dioxus-liveview = { version = "0.4", features = ["axum"] }
# serde = { version = "1.0.159", features = ["derive"] }
# layouts
# taffy = { version = "0.3.13" }

# Debug and tooling dependencies
log = "0.4.19"
dioxus-logger = "0.4.1"
dioxus-autofmt = "0.4.0"
dioxus-check = "0.4.0"
console_error_panic_hook = "0.1.7"


[features]
default = []
ssr = ["dioxus-fullstack/salvo"]
web = ["dioxus-router/web", "dioxus-fullstack/web"]
